Actually fix Query Log on mobile

--- a/style/pi-hole.css
+++ b/style/pi-hole.css
@@ -35,9 +35,6 @@ a.lookatme {
 	-webkit-animation-iteration-count: infinite;
 	animation-iteration-count: infinite;
 }
-#all-queries {
-	table-layout: fixed;
-}
 #all-queries tbody {
 	word-wrap: break-word;
 }
